<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectPitch"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/magneticsensor"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/pitchmagx"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:text="@string/magneticx" />

        <Button
            android:id="@+id/pitchmagy"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:text="@string/magneticy" />

        <Button
            android:id="@+id/pitchmagz"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:text="@string/magneticz" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/acelerometersensor"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/pitchacex"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:text="@string/acelerometerx" />

        <Button
            android:id="@+id/pitchacey"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:text="@string/acelerometery" />

        <Button
            android:id="@+id/pitchacez"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:text="@string/acelerometerz" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/orientationsensor"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/pitchorix"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:text="@string/orientationx" />

        <Button
            android:id="@+id/pitchoriy"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:text="@string/orientationy" />

        <Button
            android:id="@+id/pitchoriz"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:text="@string/orientationz" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/proximitysensor"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/pitchprox"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:text="@string/proximityx" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.64"
        android:orientation="vertical" >

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectVolume"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/magneticsensor"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/volmagx"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:text="@string/magneticx" />

        <Button
            android:id="@+id/volmagy"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:text="@string/magneticy" />

        <Button
            android:id="@+id/volmagz"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:text="@string/magneticz" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/acelerometersensor"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/volacex"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:text="@string/acelerometerx" />

        <Button
            android:id="@+id/volacey"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:text="@string/acelerometery" />

        <Button
            android:id="@+id/volacez"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:text="@string/acelerometerz" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/orientationsensor"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/volorix"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:text="@string/orientationx" />

        <Button
            android:id="@+id/voloriy"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:text="@string/orientationy" />

        <Button
            android:id="@+id/voloriz"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:text="@string/orientationz" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/proximitysensor"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/volprox"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:text="@string/proximityx" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.96"
        android:orientation="vertical" >
    </LinearLayout>

    <Button
        android:id="@+id/start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start" />

</LinearLayout>